--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "ahmetbarut/laravl-multi-route",
-    "description": "Laravel'de az kod ile çoklu rota kullanımı",
+    "description": "Laravel' çoklu dil rota kullanımı",
     "type": "library",
     "license": "MIT",
     "authors": [
